# finz

./: .gitignore  LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: steuer-agent.md
.claude/commands/: bank.md  crypto.md  finz.md  insights.md  insurance.md  portfolio.md  profile.md  scanner.md  steuer.md
.claude/commands/finz/: advisor.md  cash.md  insights.md  insurance.md
.claude/skills/bank/: SKILL.md
.claude/skills/crypto/: SKILL.md  pyproject.toml
.claude/skills/crypto/references/: fifo-methodology.md  german-crypto-tax-law.md  price-sources.md  transaction-taxonomy.yaml
.claude/skills/crypto/scripts/: aggregator.py  crypto_ingest.py  pairing.py  price_resolver.py  schemas.py  transfer_matcher.py
.claude/skills/crypto/scripts/parsers/: crypto_com.py
.claude/skills/crypto/steuer_crypto_engine.egg-info/: PKG-INFO  SOURCES.txt
.claude/skills/crypto/tests/: conftest.py  test_classifier.py  test_crypto_com_integration.py  test_crypto_com_parser.py  test_parsers_binance.py  test_parsers_coinbase.py
.claude/skills/crypto/tests/fixtures/: binance_sample.csv  coinbase_mini.csv  coinbase_sample.csv
.claude/skills/crypto/tests/fixtures/crypto_com/: sample.csv
.claude/skills/insights/: SKILL.md
.claude/skills/scan/: SKILL.md
agents/: steuer-agent.md
commands/: crypto.md  portfolio.md  profile.md  scan.md  steuer.md
skills/advisor/: SKILL.md
skills/cash/: SKILL.md
skills/crypto/: SKILL.md
skills/insurance/: SKILL.md
skills/portfolio/: SKILL.md
skills/profile/: SKILL.md
skills/steuer-filing/: SKILL.md
(+50 files in other folders)
